syntax = "proto3";

package auth;

option go_package = "./v1";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
}